--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Document</title><link rel=stylesheet href=Simply-Chocolate.6c07244e.css><body>
-    
-    <script src=Simply-Chocolate.46952ffb.js></script>
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/Simply-Chocolate.b2d9cf43.css">
+</head>
+<body>
+    <h1>hello world</h1>
+    <script src="/Simply-Chocolate.579125c3.js"></script>
 
+<script src="/Simply-Chocolate.59712999.js"></script></body></html>
