--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
-    <h1>hello world</h1>
-    <script src="./index.js"></script>
+    <header class="header">
+        <div class="container">
+            <nav class="header__nav">
+            <a href="" class="header__logo">
+                <img src="./img/logo.svg" alt="logo">
+            </a>
+
+            <ul class="header__list">
+                <li class="header__item">
+                    <a class="header__text">Home</a>
+                </li>
+                <li class="header__item">
+                    <a class="header__text">How it’s made?</a>
+                </li>
+                <li class="header__item">
+                    <a class="header__text">Our products</a>
+                </li>
+                <li class="header__item">
+                    <a class="header__text">Top sellers</a>
+                </li>
+                <li class="header__item">
+                    <a class="header__text">Chocolate is loved</a>
+                </li>
+            </ul>
+
+            <ul class="header__list-contacts">
+                <li class="header__item-contacts">
+                    <svg class="header__icon">
+                        <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                </li>
+                <li class="header__item-contacts">
+                    <svg class="header__icon">
+                        <use href="./img/icons/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                </li>
+            </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="hero">
+        <div class="container hero__container">
+            <h2 class="hero__title">Treat yourself or a loved one to 
+our finest ingredients for a moment 
+of pure delight!</h2>
+<div class="hero__btn-box">
+<button class="hero__btn-buy">Buy now</button>
+<button class="hero__btn-made">How it’s made</button>
+</div>
+<div class="hero__scroll-down">
+    <p class="hero__text">scroll down</p>
+<a href="#advantages" class="hero__scroll">
+  <svg class="hero__arrow" width="24" height="24">
+    <use href="./img/icons/symbol-defs.svg#icon-down-arrow"></use>
+  </svg>
+  
+</a>
+</div>
+        </div>
+    </section>
+
+
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
